# Portuguese-Ngram-Frequencies

./: CITATION.cff  README.md  pyproject.toml  requirements.txt
results/: 1gram.csv  2gram.csv  3gram.csv  4gram.csv  5gram.csv
scripts/: compute_ngrams.py  preprocess_brwac.sh  run_ngrams.sh
